# python-env

./: .copier-answers.yml  .dockerignore  .gitignore  Dockerfile  README.md  _freeze_stdlib.py  _pip.py  _wasi_compat.py  act.toml  app.py  justfile  prek.toml  pyproject.toml  wkg-registry.toml
.github/workflows/: ci.yml  sci.yml  toolchain.yml
.superpowers/sdd/: task-7-report.md
docs/specs/: 2026-06-28-reproducible-build-design.md
e2e/: exec.hurl  info.hurl  install-denied.hurl  libs.hurl  session.hurl  show.hurl  sqlite.hurl  tools.hurl
e2e/fs/: roundtrip.hurl
e2e/net/: install.hurl
e2e/sci/: bottleneck.hurl  lxml.hurl  lz4.hurl  msgpack.hurl  numpy.hurl  pandas.hurl  pillow-jpeg.hurl  pillow-show.hurl  pillow-text.hurl  pillow.hurl  regex.hurl
sci-stubs/: mmap.py
sci/bake/: bake-sci.sh  gen-sci-imports.py
sci/clibs/: build-clibs.sh
sci/patches/: cpython-3.14.6-wasi.patch  wit-component-0.245.1-skip-tag-export.patch
sci/smoke/: run-smoke.sh  smoke_app.py  world.wit
sci/toolchain/: build-componentize-py.sh  build-cpython.sh  build-libcxx-piceh.sh
sci/wheels/: README.md  build-all.sh  build-wheel.sh
sci/wheels/index/: build-index.sh  publish.sh
sci/wheels/libs/: bottleneck.sh  lxml.sh  lz4.sh  msgpack.sh  numpy.sh  pandas.sh  pillow.sh  regex.sh
skill/: SKILL.md
wit/: world.wit
