[project]
name = "python-env"
version = "0.15.0"
description = "Stateful, batteries-included Python environment for AI agents"
requires-python = ">=3.14"
dependencies = [
    "act-sdk>=0.6.0",
    "cbor2>=5.9.0,<6",
    "micropip==0.11.1",
    "jinja2",
    "markdown",
    "beautifulsoup4",
    "rich",
    "tabulate",
    "python-slugify",
    "pyyaml",
    "python-dateutil",
    "attrs",
    "more-itertools",
    "sortedcontainers",
    "mpmath",
]

[tool.uv.sources]
act-sdk = { path = "../../act-sdk-py" }

[dependency-groups]
dev = [
    "componentize-py>=0.24",
    "ruff>=0.15",
]
