[project]
name = "python-env"
# Pyodide-style: major = CPython ABI line (314 = CPython 3.14), minor.patch =
# python-env iteration. Enforced by `just check-version`. Superseded 0.16.0.
version = "314.1.0"
description = "Stateful, batteries-included Python environment for AI agents"
requires-python = ">=3.14"
dependencies = [
    "act-sdk>=0.6.0",
    "cbor2>=5.9.0,<6",
    "micropip==0.11.1",
    "jinja2",
    "markdown",
    "beautifulsoup4",
    "rich",
    "tabulate",
    "python-slugify",
    "pyyaml",
    "python-dateutil",
    "attrs",
    "more-itertools",
    "sortedcontainers",
    "mpmath",
]

[dependency-groups]
dev = [
    "componentize-py>=0.24",
    "ruff>=0.15",
]
sci = [
    "numpy==2.5.0",
    "pandas==3.0.3",
    "regex==2026.5.9",
    "Pillow==12.3.0",
    "msgpack==1.2.1",
    "lxml==6.1.1",
    "lz4==4.4.5",
    "bottleneck==1.6.0",
]

[tool.python-env.freeze]
numpy      = ["numpy", "numpy.char", "numpy.fft", "numpy.lib", "numpy.linalg", "numpy.ma", "numpy.polynomial", "numpy.rec", "numpy.strings"]
pandas     = ["pandas", "pandas.io.formats.string", "pandas.io.formats.html", "pandas.io.formats.console", "pandas.io.formats.format", "pandas.io.formats.printing", "pandas.io.formats.info", "pandas.io.formats.csvs"]
regex      = ["regex"]
pillow     = ["PIL.Image", "PIL.ImageFile", "PIL.ImageFont", "PIL.PngImagePlugin", "PIL.JpegImagePlugin", "PIL.BmpImagePlugin", "PIL.GifImagePlugin", "PIL.PpmImagePlugin", "PIL.ImageDraw", "PIL.ImageOps", "PIL.ImageFilter", "PIL.ImageColor", "PIL.ImageChops", "PIL.ImageEnhance", "PIL.ImageStat", "PIL.ImageMath"]
msgpack    = ["msgpack"]
lxml       = ["lxml.etree", "lxml.html"]
lz4        = ["lz4.frame"]
bottleneck = ["bottleneck"]
